--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -6,179 +6,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import numpy as np"
+    "# importing libraries\n",
+    "import scipy.io as sio\n",
+    "import numpy as np  \n",
+    "import matplotlib.pyplot as plt\n",
+    "# import sys\n",
+    "\n",
+    "# environmental settings\n",
+    "np.set_printoptions(threshold=1000) # adjust numbers to print out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable definition\n",
+    "N = 2           # total number of symbol\n",
+    "sps = 4         # number of samples in one symbol i.e. 1UI\n",
+    "SNR_db = 1000   # power ratio b/w signal and noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of address space = 9223372036854775807 = 9.223372e+18\n"
+      "Tx analog data = \n",
+      "[[-1. -1. -1. -1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.  1.  1.  1.]]\n",
+      "Tx digital data = \n",
+      "[[-1.  1.]\n",
+      " [ 1.  1.]]\n"
      ]
     }
    ],
    "source": [
-    "sz = sys.maxsize\n",
+    "# channel data generation\n",
+    "# N = 2; sps = 4\n",
+    "tx_data_digital = np.zeros((2,N))\n",
+    "tx_data_analog = np.zeros((2,N*sps))\n",
     "\n",
-    "scientific_notation=\"{:e}\".format(sz)\n",
-    "print(\"Size of address space =\", sz , \"=\" ,scientific_notation)"
+    "for i in range(N):\n",
+    "    # random signal generation, either -1 or 1\n",
+    "    data = 2*np.random.randint(2, size=(2,1)) - 1\n",
+    "    tx_data_digital[:, i] = data.flatten()\n",
+    "    tx_data_analog[:, (i)*sps : (i+1)*sps] = np.repeat(data,sps,axis=1)\n",
+    "\n",
+    "print(f'Tx analog data = \\n{tx_data_analog}')\n",
+    "print(f'Tx digital data = \\n{tx_data_digital}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "array is too big; `arr.size * arr.dtype.itemsize` is larger than the maximum possible size.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_45027/2825622638.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: array is too big; `arr.size * arr.dtype.itemsize` is larger than the maximum possible size."
-     ]
-    }
-   ],
-   "source": [
-    "np.zeros(sz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 745. GiB for an array with shape (100000000000,) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_45323/3918887090.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 745. GiB for an array with shape (100000000000,) and data type float64"
-     ]
-    }
-   ],
-   "source": [
-    "np.zeros(10 ** 11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 7.28 TiB for an array with shape (1000000000000,) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_45323/1645544161.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 7.28 TiB for an array with shape (1000000000000,) and data type float64"
-     ]
-    }
-   ],
-   "source": [
-    "np.zeros(10 ** 12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 72.8 TiB for an array with shape (10000000000000,) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_45323/192303128.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 72.8 TiB for an array with shape (10000000000000,) and data type float64"
-     ]
-    }
-   ],
-   "source": [
-    "np.zeros(10 ** 13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    ".1+.1+.1 == .3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1]\n",
-      " [ 1]]\n",
-      "[[0 0]\n",
-      " [0 0]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_36375/1850557817.py:5: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  Tx = np.zeros((2,2), dtype=np.int)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (2,1) into shape (2,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/m_/rv9nk6q90zjdt7nx4w1m4jt40000gn/T/ipykernel_36375/1850557817.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mTx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mTx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2,1) into shape (2,)"
+      "(2, 1)\n",
+      "[-1  1]\n",
+      "(2,)\n",
+      "(2,)\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "data = 2*np.random.randint(2, size=(2,1)) - 1\n",
+    "print(data.shape)\n",
+    "data = data.flatten()\n",
+    "print(data)\n",
     "\n",
-    "a = np.array([[-1],[1]])\n",
-    "print(a)\n",
-    "Tx = np.zeros((2,2), dtype=np.int)\n",
-    "print(Tx)\n",
-    "Tx[:,0] = a\n",
-    "print(Tx)"
+    "print(data.shape)\n",
+    "print(tx_data_digital[:,1].shape)"
    ]
   }
  ],
@@ -192,15 +99,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.9.10"
   },
   "orig_nbformat": 4
